force-app/main/default/objects/Defects__c/Defects__c.object-meta.xml
<CustomObject>
    <description>Tracking of defects that result from a failed test case</description>
    <label>Defects</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>