force-app/main/default/objects/Defects__c/fields/Change_Reqest__c.field-meta.xml
<CustomField>
    <fullName>Change_Reqest__c</fullName>
    <description>This is the Change Request number from the QA triage meeting.</description>
    <inlineHelpText>Please ender the CR Number from the QA triage meeting.</inlineHelpText>
    <label>Change Request #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>