force-app/main/default/objects/Defects__c/fields/Defect_Details__c.field-meta.xml
<CustomField>
    <fullName>Defect_Details__c</fullName>
    <label>Defect Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>