force-app/main/default/objects/Defects__c/fields/Defect_Title__c.field-meta.xml
<CustomField>
    <fullName>Defect_Title__c</fullName>
    <label>Defect Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>