force-app/main/default/objects/Defects__c/fields/Machine_Name__c.field-meta.xml
<CustomField>
    <fullName>Machine_Name__c</fullName>
    <label>Machine Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>posxstore1</fullName>
            </value>
            <value>
                <fullName>posxstore2</fullName>
            </value>
            <value>
                <fullName>posxstore3</fullName>
            </value>
            <value>
                <fullName>posxstore4</fullName>
            </value>
            <value>
                <fullName>posxstore5</fullName>
            </value>
            <value>
                <fullName>posxstore6</fullName>
            </value>
            <value>
                <fullName>posxstore7</fullName>
            </value>
            <value>
                <fullName>POSXSTOREMBL1</fullName>
            </value>
            <value>
                <fullName>POSXSTOREMBL2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>