force-app/main/default/objects/Defects__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 store pilot</fullName>
            </value>
            <value>
                <fullName>Learning leaders</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Rollout</fullName>
            </value>
            <value>
                <fullName>Post Rollout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>