force-app/main/default/objects/Defects__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Describes the reason a defect was closed</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Defect_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>--Currently Active--</fullName>
                <default>true</default>
                <label>--Currently Active--</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Works as Designed</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Unable to Reproduce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>