force-app/main/default/objects/Defects__c/fields/Release_Build_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Release_Build_Fixed__c</fullName>
    <label>Release/Build Fixed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>