force-app/main/default/objects/Defects__c/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <description>Defect Status Change Date.</description>
    <inlineHelpText>This is the defect Status Change Date.</inlineHelpText>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>