force-app/main/default/objects/Defects__c/fields/User_Password__c.field-meta.xml
<CustomField>
    <fullName>User_Password__c</fullName>
    <label>User/Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>