force-app/main/default/objects/Defects__c/validationRules/Release_Build_Number_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Build_Number_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Reason__c , &quot;Fixed&quot;),  ISBLANK( Release_Build_Fixed__c ))</errorConditionFormula>
    <errorDisplayField>Release_Build_Fixed__c</errorDisplayField>
    <errorMessage>Please enter an appropriate build or release number for the fix.</errorMessage>
</ValidationRule>