force-app/main/default/objects/Defects__c/listViews/RWBO_Custom_Development.listView-meta.xml
<ListView>
    <fullName>RWBO_Custom_Development</fullName>
    <columns>NAME</columns>
    <columns>Defect_Status__c</columns>
    <columns>Defect_Title__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Defect_Details__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>RWBO Custom Development</value>
    </filters>
    <label>RWBO defects</label>
    <sharedTo>
        <group>SF_Integration_Team</group>
        <group>Sr_System_Administrators</group>
    </sharedTo>
</ListView>